--- a/Pollution.html
+++ b/Pollution.html
@@ -130,6 +130,76 @@
         La vie de notre planète se dégrade
     </p>
 </div>
+<div class="art-4">
+    <p>
+        "La pollution numérique est une pollution invisible qui grandit à une
+        vitesse vertigineuse. Elle est la conséquence directe de la digitalisation
+        de nos sociétés." d'après le fondateur de Cleanfox, Edouard Nattée.
+        Ce que certaines personnes ne savent pas c'est quelles polluent plus que
+        deux personnes réunit. Tu possèdes peut-être un ordinateur et un téléphone
+        mais d'autres possèdent trois ordinateurs ainsi que deux téléphones, qui
+        peut-être ou pas pour leur travail et en plus de cela, ils ont une tablette
+        et d'autres appareils connectés. Ce qui veut dire, que contrairement à toi,
+        eux, vont polluer deux à trois fois plus que toi. Car, comme tu t’en
+        doutes, plus on a d'appareils connectés, plus on utilise internet ou tout
+        simplement ses appareils et donc on pollue plus. Aujourd’hui 3 français sur
+        4 ont un téléphone, avec 98% des 18-24ans.
+    </p>
+</div>
+<div class="jeunes">
+    <img src="img/pollution/jeune.png" width="482" height="181">
+</div>
+<div class="legd5">
+    <p>
+        Groupe d’adolescent avec leurs téléphones, Google Image
+    </p>
+</div>
+
+<div class="art-5">
+    <p>
+        Il y a encore énormément de système qui pollue, comme le streaming, ou bien
+        les applications qui réunissent des vidéos comme Netflix et YouTube, de
+        plus, les réseaux sociaux, les commandes faites sur internet, le
+        e-commerce, polluent également, ainsi que les recherches sur Google et
+        chaque messages /vidéos envoyés.
+    </p>
+</div>
+<div class="phone">
+    <img src="img/pollution/phone.png" width="686" height="343">
+</div>
+<div class="legd6">
+    <p>
+        Applications installés sur téléphone, Google Image
+    </p>
+</div>
+
+<div class="t-inter">
+    <p>
+        Tu peux à présent visionner l'interview, réalisé dans le cadre d'un
+        exercice pédagogique au département MMi de Montbéliard, sur la thématique
+        de The Dark Side of The Web.
+    </p>
+</div>
+<div class="vid-inter">
+    <img src="img/pollution/vid.png" width="670" height="453">
+</div>
+<div class="play">
+    <img src="img/pollution/play.png" width="89" height="89">
+</div>
+
+<div class="bouton">
+    <a href="Solutions.html"><img src="img/pollution/bouton2.png" height="72" width="296"></a>
+</div>
+<div class="tex-clic1_1">
+    <a href="Solutions.html"><p>
+        Moins polluer
+    </p></a>
+</div>
+<div class="tex-clic2_2">
+    <a href="Codepoursuite.html"><p>
+        Article suivant
+    </p></a>
+</div>
 
 
 
