--- a/Solutions.html
+++ b/Solutions.html
@@ -127,28 +127,98 @@
         Tu commencer par faire ce qui va être énoncer prochainement:
     </p>
 </div>
+<div class="list">
+    <ul>
+        <li>Acheter ses matériaux reconditionner, en cas de panne, il vaut mieux faire réparer ses appareils que d'en acheter
+            des nouveaux.
+        </li>
+        <li>
+            Recycle les appareils qui restent chez toi. D'après l'ADEME, il y aurait 54 à 113 millions de smartphones qui sont
+            stockés dans les placards. Tous ces appareils sont consistés de nombreux
+            matériaux qui pourrez être utilisés à la fabrication d'autres appareils.
+        </li>
+        <li>
+            Trier, garder que le nécessaire de ses e-mails
+        </li>
+        <li>
+            Désactivez les fonctions Wifi, Bluetooth…,
+        </li>
+    </ul>
+</div>
+<div class="anciens-tels">
+    <img src="img/Solutions/anciens-tels.jpg" height="281" width="375">
+</div>
+<div class="lgd3">
+    <p>
+        Les téléphones qui restent dans tes tiroirs, Google Image
+    </p>
+</div>
 
+<div class="list2">
+    <ul>
+        <li>
+            Limite le nombre d'applications et de logiciels sur tes appareils.
+        </li>
+    </ul>
+</div>
+<div class="parg5">
+    <p>
+        Surtout, que comme la plupart des personnes, on télécharge des applications
+        "au cas où" mais ce n'est pas ce qu'il faut faire. Il existe des sites qui
+        veillent à la réduction de la pollution numérique comme Clickclean, qui
+        évalue la consommation énergétique des applications et des sites utilisés
+        dans le monde. Ils sont notés d'A à F et A étant pour émettre les moins
+        polluantes. De plus, il y a Cleanfox, qui participe à la réduction de la
+        pollution numérique. Ce site consiste à supprimer et de se désabonner de
+        mails non utile à l'utilisateur, ce qui permet de réduire son empreinte de
+        carbone.
+    </p>
+</div>
 
+<div class="firefox">
+    <img src="img/Solutions/firefox.png" height="329" width="375">
+</div>
+<div class="lgd4">
+    <p>
+        Site Web Cleanfox, Google Image
+    </p>
+</div>
 
-
-
-
-
-
-
-
+<div class="list3">
+    <ul>
+        <li>
+            Privilégie des moteurs de recherches qui sont engagées.
+        </li>
+    </ul>
+</div>
+<div class="parg6">
+    <p>
+        Il y a écosia, qui reverse 80% de ses bénéfices afin de planter des arbres,
+        pour lutter contre la déforestation. Lilo, un moteur de recherche solidaire
+        qui finance gratuitement les projets que tu as choisis, il en existe encore
+        d'autres.
+    </p>
+</div>
+<div class="ecosia">
+    <img src="img/Solutions/ecosia.png" height="324" width="375">
+</div>
+<div class="lgd5">
+    <p>
+        Moteur de recherche écosia, Google Image
+    </p>
+</div>
 
 
 <div class="bouton">
-    <a href="Solutions.html"><img src="img/pollution/bouton2.png" height="72" width="296"></a>
+    <a href="article-scientifique.html"><img src="img/pollution/bouton2.png" height="72" width="296"></a>
 </div>
 <div class="tex-clic1_1">
-    <a href="Solutions.html"><p>
-        Moins polluer
+    <a href="article-scientifique.html"><p>
+        Article scientifique
     </p></a>
 </div>
 <div class="tex-clic2_2">
-    <a href="Codepoursuite.html"><p>
+    <a href="article-scientifique.html"><p>
         Article suivant
     </p></a>
 </div>
