page article scientifique fini hormis le liens à l'article

--- a/Solutions.html
+++ b/Solutions.html
@@ -212,12 +212,12 @@
 <div class="bouton">
     <a href="article-scientifique.html"><img src="img/pollution/bouton2.png" height="72" width="296"></a>
 </div>
-<div class="tex-clic1_1">
+<div class="tex-clic-s1">
     <a href="article-scientifique.html"><p>
         Article scientifique
     </p></a>
 </div>
-<div class="tex-clic2_2">
+<div class="tex-clic-s2">
     <a href="article-scientifique.html"><p>
         Article suivant
     </p></a>
