page autres projets fini

--- a/article-scientifique.html
+++ b/article-scientifique.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/mescss/menu.css">
     <link rel="stylesheet" href="./css/mescss/typography.css">
     <link rel="stylesheet" href="./css/mescss/article-scientifique.css">
-    <title>Pollution</title>
+    <title>Article scientifique</title>
 </head>
 <body>
 <header>
