--- a/autres-projets.html
+++ b/autres-projets.html
@@ -2,67 +2,157 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale-1.0">
+    <link rel="stylesheet" href="css/lib/normalize.css">
     <link rel="stylesheet" href="./css/mescss/menu.css">
+    <link rel="stylesheet" href="./css/mescss/typography.css">
+    <link rel="stylesheet" href="./css/mescss/autres-projets.css">
     <title>Autres projets</title>
 </head>
 <body>
+<header>
+    <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
+        <div class="nav-toggle-bar"></div>
+    </div>
+    <nav class="menu" >
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <div id="trait_dessus"><hr></div>
+            <li><a href="Codepoursuite.html">Benjamin le hacker</a></li>
+            <div id="trait_dessus"><hr></div>
+            <li><a href="Pollution.html">Pollution numérique</a></li>
+            <div id="trait_dessus"><hr></div>
+            <li><a href="Solutions.html">Moins polluer autrement</a></li>
+            <div id="trait_dessus"><hr></div>
+            <li><a href="autres-projets.html">Autres projets</a></li>
+            <div id="trait_dessus"><hr></div>
+            <li><a href="a-propos.html">À propos</a></li>
+        </ul>
+    </nav>
+    <div class="logo">
+        <img src="img/dc.png" height="74" width="94">
+    </div>
+    <div class="fond_header"></div>
+    <div class="titre_projet">
+        <p>Data Code</p>
+    </div>
+    <div class="titre_projet2">
+        <p>Un clic ! c'est tout !</p>
+    </div>
+</header>
 
-<p>
-    Data Code
-</p>
-<p>
-    Un clic ! C'est tout !
-</p>
-<h1>Benjamin le hacker</h1>
-<p>
-    Si cela vous a plus, voici les autres projets de mon groupe:
-</p>
-<img src="img/autres-projets/Her2.png" alt="her" width="422" height="550">
-<img src="img/autres-projets/Ghost.png" alt="ghost in shell" width="422" height="550">
-<h2>Her</h2><h2>Ghost In Shell</h2>
-<p>Cin&Science</p><p>Hyperconnexion</p>
-
-<img src="img/autres-projets/Blackmirror2.png" alt="black mirror" width="422" height="550">
-<img src="img/autres-projets/htsdo.png" alt="how to sell drugs online" width="422" height="550">
-<h2>Black Mirror</h2><h2>How To Sell Drugs Online</h2>
-<p>Black Data</p><p>Wattor</p>
-
-<img src="img/autres-projets/searching.png" alt="Searching" width="422" height="550">
-<img src="img/autres-projets/southpark.png" alt="South Park" width="422" height="550">
-<h2>Searching: Portée disparue</h2><h2>South park</h2>
-<p>Pollution cachée</p><p>South Park dénonce amazon</p>
-
-<img src="img/autres-projets/girlboss.png" alt="Girlboss" width="422" height="550">
-<img src="img/autres-projets/eagleeye.png" alt="Eagle Eye" width="422" height="550">
-<h2>Girlboss</h2><h2>L'oeil du mal</h2>
-<p>Polluting girl</p><p>Pollution cachée des data center</p>
-
-<img src="img/autres-projets/bladerunner.png" alt="Blade Runner2049" width="422" height="550">
-<img src="img/autres-projets/hackers.png" alt="Hackers" width="422" height="550">
-<h2>Blade Runner2049</h2><h2>Hackers</h2>
-<p>Data Runner</p><p>Centhack</p>
-
-<img src="img/autres-projets/thesocial.png" alt="Blade Runner2049" width="422" height="550">
-<h2>The social network</h2>
-<p>The shadow of sociability</p>
+<div class="txt1">
+    <p>
+        Si cela vous a plus, voici les autres projets de mon groupe:
+    </p>
+</div>
 
 
+<div class="ba1">
+    <a href="https://projets1.sitecali.fr/"><img src="img/autres-projets/her.jpg" width="153" height="204"></a>
+</div>
+<div class="ba2">
+    <a href="http://projets1.taniaandre.fr/"><img src="img/autres-projets/ghost.jpg" width="143" height="204"></a>
+</div>
+<div class="her">
+    <a href="https://projets1.sitecali.fr/"><p><i>Her</i><br>Cin&Science</p></a>
+</div>
+<div class="ghost">
+    <a href="http://projets1.taniaandre.fr/"><p><i>Ghost In Shell</i><br>Hyperconnexion</p></a>
+</div>
 
 
-<p>
-    A propos
-</p>
-<p>
-    Nina BELLINO A1
-</p>
-<p>
-    nina.bellin06@gmail.com
-</p>
-<p>
-    Projet réaliser dans le cadre d'un exercice pédagogique au département MMI de Montbéliard
-</p>
-<p>
-    MMI Montbéliard
-</p>
+<div class="ba3">
+    <a href="http://projets1.www.alexanthoine.fr"><img src="img/autres-projets/blackmirror.jpg" width="148.3" height="218"></a>
+</div>
+<div class="ba4">
+    <a href="http://projets1.site.thibaudbarrand.fr/"><img src="img/autres-projets/htsdo.jpg" width="164" height="218"></a>
+</div>
+<div class="blackmirror">
+    <a href="http://projets1.www.alexanthoine.fr"><p><i>Balck Mirror</i></p></a>
+</div>
+<div class="blackmirror2"><a href="http://projets1.www.alexanthoine.fr"><p>Black Data</p></a></div>
+<div class="htsdo">
+    <a href="http://projets1.site.thibaudbarrand.fr/"><p><i>How To Sell <br>Drugs Online</i></p></a>
+</div>
+<div class="htsdo2"><a href="http://projets1.site.thibaudbarrand.fr/"><p>Wattor</p></a></div>
+
+
+<div class="ba5">
+    <a href="http://projets1.lenabtlrd.fr/"><img src="img/autres-projets/search.jpg" width="153" height="204"></a>
+</div>
+<div class="ba6">
+    <a href="http://projets1.nbaumann.fr"><img src="img/autres-projets/south-park.jpg" width="143" height="204"></a>
+</div>
+<div class="searching">
+    <a href="http://projets1.lenabtlrd.fr/"><p><i>Searching: <br>Portée disparue</i>Pollution cachée</p></a>
+</div>
+<div class="south-park">
+    <a href="http://projets1.nbaumann.fr"><p><i>South park</i><br>South Park <br>dénonce amazon</p></a>
+</div>
+
+
+<div class="ba7">
+    <a href="https://projets1.marinebeurier.fr/"><img src="img/autres-projets/girlboss.jpg" width="152" height="226"></a>
+</div>
+<div class="ba8">
+    <a href="http://projets1.www.raphbonin.fr/"><img src="img/autres-projets/eagle-eye.jpg" width="150.67" height="226"></a>
+</div>
+<div class="girl-boss">
+    <a href="https://projets1.marinebeurier.fr/"><p><i>Girlboss</i><br>Polluting girl</p></a>
+</div>
+<div class="eagle-eye">
+    <a href="http://projets1.www.raphbonin.fr/"><p><i>L'oeil du mal</i><br>Pollution cachée <br>des data center</p></a>
+</div>
+
+
+<div class="ba9">
+    <a href="http://projets1.mathisbotton.fr"><img src="img/autres-projets/bladerunner.jpg" width="153" height="207"></a>
+</div>
+<div class="ba10">
+    <a href="http://projets1.evaduxewy.fr/"><img src="img/autres-projets/hackers.jpg" width="153" height="210"></a>
+</div>
+<div class="bladerunner">
+    <a href="http://projets1.mathisbotton.fr"><p><i>Blade <br>Runner2049</i><br>Data Runner</p></a>
+</div>
+<div class="heackers">
+    <a href="http://projets1.evaduxewy.fr/"><p><i>Hackers</i> <br>Centhack</p></a>
+</div>
+
+
+<div class="ba11">
+    <a href="http://projets1.mathisbotton.fr"><img src="img/autres-projets/thesocial.jpg" width="154" height="206"></a>
+</div>
+<div class="the-social">
+    <a href="http://projets1.nathanbroglin.fr"><p><i>The social network</i><br></p></a>
+</div>
+<div class="the-social2"><a href="http://projets1.nathanbroglin.fr"><p>The shadow of <br>sociability</p></a></div>
+
+
+
+<div class="bouton">
+    <a href="a-propos.html"><img src="img/autres-projets/bouton4.png" height="72" width="296"></a>
+</div>
+<div class="tex-clic-ap1">
+    <a href="a-propos.html"><p>
+        À Propos
+    </p></a>
+</div>
+
+<footer>
+    <div class="fond_footer"></div>
+    <div class="nom_prenom">
+        <p>Nina BELLINO A1</p>
+    </div>
+    <div class="mailto">
+        <a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a>
+    </div>
+    <div class="projet">
+        <p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p>
+    </div>
+    <div class="mmi_montbe">
+        <a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a>
+    </div
+</footer>
 </body>
 </html>
