début page à propos

--- a/a-propos.html
+++ b/a-propos.html
@@ -1,53 +1,112 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale-1.0">
+    <link rel="stylesheet" href="css/lib/normalize.css">
     <link rel="stylesheet" href="./css/mescss/menu.css">
-    <title>A propos</title>
+    <link rel="stylesheet" href="./css/mescss/typography.css">
+    <link rel="stylesheet" href="./css/mescss/a-propos.css">
+    <title>À propos</title>
 </head>
 <body>
-<img src="img/dc.png" alt="dc" width="90" height="60">
-<img src="img/rectbleu.png" alt="rectbleu" width="375" height="60">
-<p>
-    Data Code
-</p>
-<p>
-    Un clic ! C'est tout !
-</p>
-<img src="img/apropos/cours.jpg" width="2150" height="850">
-<p>
-    Bonjour, je suis une étudiante au département MMI, Métiers du Multimédia et
-    de l’Internet, de Montbéliard. J’ai créé ce site pour un projet lors ma de
-    première année d’étude. La thématique de la pollution numérique est abordée
-    à travers un héro dont on constate ses erreurs commises. J’ai choisi
-    Benjamin, de Code poursuite, pour mon sujet, car c’est un film qui n’est
-    pas beaucoup connu mais qui est très intéressant. Donc, lorsque
-    l’utilisateur en apprend sur la pollution numérique il peut en même temps
-    découvrir un film .
-</p>
-<p>
-    Ce site présente un héro, plus précisément son utilisation à internet,
-    ainsi que les méfaits de la pollution numérique et les solutions.
-</p>
-<img src="img/apropos/ecriture.jpg" width="967" height="725">
-<p>
-    CONTACT MOI
-</p>
-<p>
-    Prénom:
-</p>
-<p>
-    Nom:
-</p>
-<p>
-    Adresse E-mail:
-</p>
-<p>
-    Objet:
-</p>
-<p>
-    Message
-</p>
+<header>
+    <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
+        <div class="nav-toggle-bar"></div>
+    </div>
+    <nav class="menu" >
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <div id="trait_dessus"><hr></div>
+            <li><a href="Codepoursuite.html">Benjamin le hacker</a></li>
+            <div id="trait_dessus"><hr></div>
+            <li><a href="Pollution.html">Pollution numérique</a></li>
+            <div id="trait_dessus"><hr></div>
+            <li><a href="Solutions.html">Moins polluer autrement</a></li>
+            <div id="trait_dessus"><hr></div>
+            <li><a href="autres-projets.html">Autres projets</a></li>
+            <div id="trait_dessus"><hr></div>
+            <li><a href="a-propos.html">À propos</a></li>
+        </ul>
+    </nav>
+    <div class="logo">
+        <img src="img/dc.png" height="74" width="94">
+    </div>
+    <div class="fond_header"></div>
+    <div class="titre_projet">
+        <p>Data Code</p>
+    </div>
+    <div class="titre_projet2">
+        <p>Un clic ! c'est tout !</p>
+    </div>
+</header>
 
+<div class="class">
+    <img src="img/apropos/class.png" height="276" width="375" ">
+</div>
+<div class="present">
+    <p>
+        Bonjour, je suis une étudiante au département MMI, Métiers du Multimédia et
+        de l’Internet, de Montbéliard. J’ai créé ce site pour un projet lors ma de
+        première année d’étude. La thématique de la pollution numérique est abordée
+        à travers un héro dont on constate ses erreurs commises. J’ai choisi
+        Benjamin, de Code poursuite, pour mon sujet, car c’est un film qui n’est
+        pas beaucoup connu mais qui est très intéressant. Donc, lorsque
+        l’utilisateur en apprend sur la pollution numérique il peut en même temps
+        découvrir un film .
+    </p>
+</div>
+
+<div class="machine">
+    <img src="img/apropos/machine.png" height="812" width="375" ">
+</div>
+<div class="contact-moi">
+    <p>
+        Contact moi
+    </p>
+</div>
+<div class="edit">
+    <img src="img/apropos/edit.png" height="83" width="83" ">
+</div>
+<div class="rect-violet"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="bouton">
+    <a href=""><img src="img/apropos/bouton5.png" height="72" width="296"></a>
+</div>
+<div class="tex-clic-ac1">
+    <a href=""><p>
+        ENVOYER
+    </p></a>
+</div>
+
+<footer>
+    <div class="fond_footer"></div>
+    <div class="nom_prenom">
+        <p>Nina BELLINO A1</p>
+    </div>
+    <div class="mailto">
+        <a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a>
+    </div>
+    <div class="projet">
+        <p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p>
+    </div>
+    <div class="mmi_montbe">
+        <a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a>
+    </div
+</footer>
 </body>
 </html>
