formulaire de contact (commencement)

--- a/a-propos.html
+++ b/a-propos.html
@@ -71,7 +71,20 @@
 <div class="rect-violet"></div>
 
 
-
+<div class="wrap">
+    <div class="contact-form">
+        <div class="input-fields">
+            <input type="text" class="input" placeholder="Nom">
+            <input type="text" class="input" placeholder="Prénom">
+            <input type="text" class="input" placeholder="Adresse Email">
+            <input type="text" class="input" placeholder="Objet">
+        </div>
+        <div class="msg">
+            <textarea placeholder="Message"></textarea>
+            <div class="btn">ENVOYER</div>
+        </div>
+    </div>
+</div>
 
 
 
